--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.1.0",
-    "nodemon": "^3.0.1"
+    "mongodb": "^6.1.0"
   }
 }
