--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cse341-project1",
+  "name": "cse341-project2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,21 +9,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jarliks/CSE341-project1.git"
+    "url": "git+https://github.com/Jarliks/CSE341-project2.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Jarliks/CSE341-project1/issues"
+    "url": "https://github.com/Jarliks/CSE341-project2/issues"
   },
-  "homepage": "https://github.com/Jarliks/CSE341-project1#readme",
+  "homepage": "https://github.com/Jarliks/CSE341-project2#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
+    "morgan": "^1.10.0",
     "swagger-autogen": "^2.23.6",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "validatorjs": "^3.22.1"
   }
 }
