--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.5.0",
+    "express-openid-connect": "^2.17.0",
+    "express-session": "^1.17.3",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0",
     "validatorjs": "^3.22.1"
